install/addons/kubeview-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubeview-rbac
  labels:
    app: kubeview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeview
  template:
    metadata:
      labels:
        app: kubeview
    spec:
      serviceAccountName: kubeview
      containers:
      - name: kubeview-containers
        image: bencuk/kubeview:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128M"
            cpu: "0.1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
