install/addons/monitor-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitor
  annotations:
    #ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /grafana(/|$)(.*)
          backend:
            serviceName: mygrafana
            servicePort: 4444 
        - path: /prometheus/(/|$)(.*)
          backend:
            serviceName: myprometheus-server
            servicePort: 80
        - path: /kubeview/(/|$)(.*)
          backend:
            serviceName: kubeview
            servicePort: 3030
